--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "paths": {
       "@*": ["*"],
       "@components/*": ["components/*"],
-      "@context/*": ["context/*"],
+      "@stores/*": ["stores/*"],
       "@hooks/*": ["hooks/*"],
       "@layouts/*": ["layouts/*"],
       "@pages/*": ["pages/*"],
